fix: sections gap

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -480,7 +480,7 @@ section {
 	// height: calc(100vh - 2rem - 48px - 100px);
 	padding-top: 0;
 	margin-bottom: 0;
-	padding-top: 80px;
+	padding-top: 40px;
 
 	h2 {
 		margin-bottom: 20px;
@@ -493,7 +493,7 @@ section {
 		flex-direction: column;
 		align-items: center;
 		gap: 1rem;
-		padding-top: calc(100px + 40px);
+		padding-top: calc(100px + 20px);
 	}
 
 	.section__pic-container {
@@ -819,6 +819,11 @@ section.experience {
 section.projects {
 	margin: 0;
 	height: auto;
+	padding-top: 60px;
+
+	@media screen and (max-width: 768px) {
+		padding-top: 40px;
+	}
 
 	.arrow {
 		right: 5rem;
